--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Taller Eventos</title>
 </head>
 <body>
-    <button id="buttonsaludar">Saludar</button>
+    <script> 
+    function alerthola() {
+        alert("Hola!")
+    }
+    </script>
+    <div id="greendiv">
+        <button onclick="alerthola()" id="buttonsaludar">Saludar</button>
+    </div>
+    <style>
+        #greendiv {
+            background-color: green;
+            padding: 5px;
+        }
+    </style>
+    <script src="eventos.js"></script>
 </body>
 </html>
