--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script> 
     function alerthola() {
         alert("Hola!")
+        event.stopPropagation()
     }
     </script>
     <div id="greendiv">
